# Control-of-Quadrupedal-Robot-

./: README.md
spot_robot/: requirements.sh
spot_robot/dogbot_control/controller/: position_control.yaml
spot_robot/dogbot_description/meshes/: LegUpper_withCover.dae
spot_robot/dogbot_description/urdf/: collision_foot_names.txt  dogbot.sdf  dogbot.urdf  dogbot.xacro
spot_robot/dogbot_gait/: CMakeLists.txt  LICENSE  package.xml
spot_robot/dogbot_gait/include/ReactRobotics/: DogBotV4LegKinematics.hh  LineABC2d.hh
spot_robot/dogbot_gait/include/ReactRobotics/GaitController/: QuadrupedController.hh  QuadrupedPose.hh  SplineGaitController.hh  Splines.hh
spot_robot/dogbot_gait/launch/: gait.launch  gazebo_gait.launch
spot_robot/dogbot_gait/rviz/: dogbot.rviz
spot_robot/dogbot_gait/src/: DogBotV4LegKinematics.cc  LineABC2d.cc  QuadrupedController.cc  QuadrupedPose.cc  SplineGaitController.cc  Splines.cc  dogbot_gait_node.cc
spot_robot/dogbot_gazebo/launch/: dog.launch  main.launch  put_robot_in_world.launch  start_world.launch
spot_robot/dogbot_markers/: CMakeLists.txt  package.xml
spot_robot/dogbot_markers/launch/: world_to_base_tf_publish.launch
spot_robot/dogbot_markers/rviz/: dogbot.rviz
spot_robot/dogbot_markers/scripts/: arrows_rviz.py  world_to_base_tf_publisher.py
