<?xml version="1.0"?>
<package>
  <name>dogbot_gait</name>
  <version>0.0.0</version>
  <description>Dogbot Gait Generator</description>

  <maintainer email="charles.galambos@reactai.com">Charles Galambos</maintainer>

  <license>MIT</license>

  <url type="website">https://reactrobotics.com/</url> 
  <url type="website">https://github.com/ReactRobotics/DogBotV4</url> 

  <author email="charles.galambos@reactai.com">Charles Galambos</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>